Fix /applications page bugs (#793)
* fix: Application by id page

- Add id in query params when view details btn is clicked
- When url with id query param is opened, apps should load applications in background

* fix: Status filter on applications page

- Check the selected filter value when page with applied filter is reloaded
- Remove status query param from url when status filter is cleared

* fix: Overflowing text in application cards

* Hidden elements should not be rendered on applications page

* fix: Add necessary spacing on applications page

* Add/update tests for applications page

* Replace history state instead of push state on applications page

--- a/applications/style.css
+++ b/applications/style.css
@@ -147,6 +147,7 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
   padding-bottom: 10px;
+  padding-top: 32px;
   gap: 25px;
 }
 
@@ -157,7 +158,7 @@ body {
 .application-card {
   border-radius: 15px;
   box-shadow: var(--elevation-1);
-  padding: 15px;
+  padding: 24px;
   width: 44%;
   display: flex;
   flex-direction: column;
@@ -186,6 +187,7 @@ body {
 
   font-weight: 700;
   line-height: normal;
+  padding-bottom: 8px;
 }
 
 .application-card .user-info .company-name {
@@ -200,6 +202,12 @@ body {
   font-size: 13px;
   font-weight: 600;
   line-height: normal;
+}
+
+.hide-overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .application-card .user-intro {
@@ -232,6 +240,10 @@ body {
   text-align: center;
   font-size: 32px;
   margin: 30px;
+}
+
+.loader.hidden {
+  display: none;
 }
 
 #page_bottom_element {
@@ -269,7 +281,7 @@ body {
 .application-details .application-details-main {
   height: 90%;
   overflow-y: auto;
-  padding: 15px;
+  padding: 15px 30px;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -366,6 +378,10 @@ body {
   font-size: 32px;
   margin-top: 20px;
   font-weight: 600;
+}
+
+.no_applications_found.hidden {
+  display: none;
 }
 
 .close-button-icon {
